# DolphinTechBackend

./: .gitignore  Dockerfile  README.md  dolphine.db  dolphine.env  file.json  main.py  pyproject.toml  requirements.txt
dolphine/: parser.py
dolphine/parse_rksi/: parser_rksi.py
src/: dolphine_app.py  settings.py
src/admin/: admin_panel.py
src/admin/models/: note_model_view.py  user_model_view.py
src/admin_models/: models_for_admin_panel.py
src/api/: __init__.py
src/api/dep/: dependencies.py
src/api/dto/: iubip_dto.py  rgups_dto.py  rksi_dto.py
src/api/exceptions/: global_exception.py  iubip_excp.py  rgups_excp.py  rksi_excp.py
src/api/routers/: iubip_router.py  rgups_router.py  rksi_router.py
src/api/services/: iubip_service.py  rgups_service.py  rksi_service.py
src/database/: mainbase.py  worker.py
src/database/models/: note_model.py  user_model.py
src/database/repository/: note_repository.py  user_repository.py
src/dolphine/: parser.py
src/dolphine/parse_iubip/: parser_Iubip.py
src/dolphine/parse_rgups/: parser_rgups.py
src/dolphine/parse_rksi/: parser_rksi.py
